Adjust target variable to specific emissions

--- a/1_exploratory.ipynb
+++ b/1_exploratory.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict co2 emissions of power plants accross Europe.\n",
+    "Predict specific co2 emissions of power plants accross Europe.\n",
     "\n",
     "Data from the JRC Open Power Plants Database (JRC-PPDB-OPEN) published on December 2019. It can be accesed at https://data.jrc.ec.europa.eu/dataset/9810feeb-f062-49cd-8e76-8d8cfd488a05"
    ]
