New graph comments

--- a/3_modelling.ipynb
+++ b/3_modelling.ipynb
@@ -941,6 +941,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Besides from the source of the emission estimation, the most important features for predicting specific emissions are the capacity factor of the plant, the efficiency and time related features such as ramp-up and time coverage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Save model data"
    ]
   },
